# ratrun

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  audio.rs  config.rs  input.rs  lore.rs  main.rs  math.rs  scores.rs  titleart.rs
src/game/: bullet.rs  collision.rs  director.rs  enemy.rs  gem.rs  level.rs  loadout.rs  mod.rs  nav.rs  particle.rs  player.rs  weapon.rs  world.rs
src/render/: framebuffer.rs  hud.rs  menu.rs  mod.rs  palette.rs
