[package]
name = "ratrun"
version = "0.1.0"
edition = "2021"
description = "Rat Run — a terminal bullet-hell horde survivor built with ratatui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
rodio = { version = "0.20", default-features = false }
rascii_art = "0.4.5"
image = "0.24" # must match rascii_art's image version so DynamicImage unifies

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
